Fixing alignment issue on Contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
   color: #222;
   text-align: center;
   overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 
